Rename ui-show-layer-borders to be consistent with other flag.

Rename ui-show-layer-borders to ui-show-composited-layer-borders to be
consistent with the renderer compositor flag.

BUG=708518
TEST=AboutFlagsHistogramTest.CheckHistograms and Manual
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2821273003
Cr-Commit-Position: refs/heads/master@{#465450}

Former-commit-id: c63400e394a50c8b42ef798eaee47245c5febf04